--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,6 +7,19 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        
+<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyCOxSqDKes1HZ2guowLCj-ydlwwLb7iuK0",
+    authDomain: "project-5631839431368139420.firebaseapp.com",
+    databaseURL: "https://project-5631839431368139420.firebaseio.com",
+    storageBucket: "project-5631839431368139420.appspot.com",
+  };
+  firebase.initializeApp(config);
+</script>
+    
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
